<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relative_layout1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/villalobos_2015"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/image_description" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_buy"
            android:id="@+id/btn_buy"
            android:drawableLeft="@drawable/ic_action_account_balance"
            android:capitalize="words"
            android:layout_gravity="center_horizontal"
            android:background="#3F51B5"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_pay"
            android:id="@+id/btn_pay"
            android:drawableLeft="@drawable/ic_action_shopping_cart"
            android:layout_gravity="center_horizontal"
            android:background="#3F51B5"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_visit"
            android:id="@+id/btn_visit"
            android:drawableLeft="@drawable/ic_action_visibility"
            android:layout_gravity="center_horizontal"
            android:background="#3F51B5"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!-- <include android:id="@+id/btn_buy"
        layout="@layout/button_buy" />

        <include android:id="@+id/btn_pay"
            layout="@layout/button_pay" />

        <include android:id="@+id/btn_visit"
            layout="@layout/button_visit" /> -->

    </LinearLayout>
</RelativeLayout>
